1、修改tag样式 2、Links支持图标 3、头像改成圆形

--- a/themes/next/source/css/_common/components/post/post-tags.styl
+++ b/themes/next/source/css/_common/components/post/post-tags.styl
@@ -1,10 +1,20 @@
 .posts-expand .post-tags {
-  margin-top: 40px;
+  display: inline;
   text-align: center;
 
   a {
+    background: #0e90d2;
     display: inline-block;
     margin-right: 10px;
-    font-size: 13px;
+    font-size: 10px;
+    min-width: 10px;
+    padding: 1px 4px;
+    font-weight: 700;
+    color: #fff;
+    //line-height: 1;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-align: center;
+    border-radius: 1000px;
   }
 }
