--- a/themes/next/source/css/_schemes/Mist/_posts-expanded.styl
+++ b/themes/next/source/css/_schemes/Mist/_posts-expanded.styl
@@ -32,11 +32,11 @@
   .post-tags {
     text-align: left;
     a {
-      padding: 1px 5px;
-      background: $whitesmoke;
+      //padding: 1px 5px;
+      background: $orange;
       border-bottom: none;
     }
-    a:hover { background: $grey-light; }
+    a:hover { background: $highlight-orange;}
   }
   .post-nav { margin-top: 40px; }
 }
